fixing spacing for dashboard

--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -15,7 +15,7 @@
     display: flex;
     columns: 4;
     justify-content: space-around;
-    margin-top: 10px;
+    margin-top: 25px;
 }
 
 .portfolioValue {
